<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">UGHO</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="anonimus_button_label">Anonimus</string>
    <string name="register_button_label">Register</string>
    <string name="login_button_label">Log in</string>
    <string name="login_activity_label">Log in</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="mandatory_field_error">The field %1$s is mandatory</string>
    <string name="wrong_credential_error">bad credential</string>
    <string name="username_label">username</string>
    <string name="password_label">password</string>
    <string name="new_data_button_label">Insert new data</string>
    <string name="old_data_button_label">Old data button</string>
    <string name="remote_data_button_label">Remote data button</string>
    <string name="location_label">location</string>
    <string name="date_label">birth date</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="email_label">email</string>
    <string name="title_activity_show_user_data">ShowUserDataActivity</string>
    <string name="register_activity_label">ShowUserDataActivity</string>
    <string name="confirm_button_label">confirm</string>
    <string name="luck_label">luck</string>
    <string name="work_label">work</string>
    <string name="health_label">health</string>
    <string name="love_label">love</string>
    <string name="data_question_format">How do you feel in %1$s?</string>
    <string name="send_button_label">send</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
