<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.NewDataActivity">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        tools:context=".MainActivity"
        android:orientation="vertical">


        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/love_label"
            android:id="@+id/new_love_data"
            android:onClick="insertNewData"/>

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/health_label"
            android:id="@+id/new_health_data"
            android:onClick="insertNewData"/>

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/work_label"
            android:id="@+id/new_work_data"
            android:onClick="insertNewData"
            />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/luck_label"
            android:id="@+id/new_luck_data"
            android:onClick="insertNewData"
            />

    </LinearLayout>


</FrameLayout>
